--- a/DATA/DATA.csproj
+++ b/DATA/DATA.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="DeleteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateData.cs" />
     <Compile Include="UserData.cs" />
